# cmach_ncatbot_plugins

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
data/: rbac.json
plugins/classhelper/: classhelper.py  manifest.toml  settings.json
plugins/cmach_socket_plugin/: manifest.toml  plugin.py
plugins/jm/: jm.py  manifest.toml
plugins/jm/text2img/: README.md  __init__.py  __main__.py  cli.py  engine.py  fonts.py  pyproject.toml  styles.py
plugins/wol/: manifest.toml  wol.py
