[project]
name = "text2img"
version = "0.1.0"
description = "纯文本 → 多语言 PNG（纯 Pillow，Termux 友好）"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
text2img = "text2img.cli:main"